--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
       test lol test link: <a href="test">testttttttt</a> ok
 
-      <?php include '/php/phptest.php';?>hi
+      <?php include '/php/phptest.php';?>hi hi again
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
