--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-      test lol test link: <a href="test">testttttttt</a> ok
+      test lol test link: <a href="test">testttttttt</a> ok asdfasdf
 
       <div id="phptest"></div>
 
       <script>
         $(document).ready(function() {
-            $("#phptest").load("/php/phptest.php");
+            $("#phptest").load("test.html");
         });
         </script>
 
