--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
       test lol test link: <a href="test">testttttttt</a> ok asdfasdf
 
-      <div id="phptest"></div>
+      <div id="test"></div>
 
       
 
@@ -24,7 +24,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script>
       $(document).ready(function() {
-          $("#phptest").load("test.html");
+          $("#test").load("test.html");
       });
       </script>
   </body>
