--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       test lol test link: <a href="test">testttttttt</a> ok asdfasdf
 
       <div id="test"></div>
+      <div id="boner"></div>
 
       
 
@@ -24,6 +25,7 @@
     <script>
       $(document).ready(function() {
           $("#test").load("test.html");
+          $("#boner").load("boner.html");
       });
       </script>
   </body>
